--- a/sass/blocks/_media.scss
+++ b/sass/blocks/_media.scss
@@ -137,8 +137,9 @@
 				height: 10px;
 				text-align: center;
 				border-radius: 50%;
-				border: none;
+				border-color: gray;
 				margin: 2px;
+				border: none;
 			}
 			.tns-nav-active {
 				background-color: gray;
