--- a/sass/blocks/_media.scss
+++ b/sass/blocks/_media.scss
@@ -133,16 +133,16 @@
 			display: flex;
 			justify-content: center;
 			button {
-				width: 2px;
+				width: 10px;
 				height: 10px;
 				text-align: center;
 				border-radius: 50%;
-				border-color: gray;
 				margin: 2px;
 				border: none;
+				background-color: #ededed;
 			}
 			.tns-nav-active {
-				background-color: gray;
+				background-color: #a1a1a1;
 			}
 			
 		}
