--- a/sass/blocks/_media.scss
+++ b/sass/blocks/_media.scss
@@ -214,17 +214,30 @@
 	.review {
 		width: 100%;
 		&__photo {
-			margin: 10px 10px 0 10px;
+			display: flex;
+			align-items: center;
+			margin: 30px 10px 0 10px;
 			img	{
 				width: 75px;
 				height: 75px;
 			}
 		}
 		&__name {
-			margin-top: 100px;
+			margin-top: 30px;
+			font-size: 12px;
+		}
+		&__subtitle {
+			font-size: 8px;
+			line-height: 8px;
 		}
 		&__comment {
-			width: 100%;
+			margin-top: 5px;
+			min-width: 300px;
+			font-size: 10px;
+			line-height: 10px;
+			br {
+				display: none;
+			}
 		}
 	}
 }
