--- a/sass/blocks/_media.scss
+++ b/sass/blocks/_media.scss
@@ -231,6 +231,7 @@
 			line-height: 8px;
 		}
 		&__comment {
+			margin-right: 10px;
 			margin-top: 5px;
 			min-width: 300px;
 			font-size: 10px;
