--- a/sass/blocks/_media.scss
+++ b/sass/blocks/_media.scss
@@ -233,7 +233,7 @@
 		&__comment {
 			margin-right: 10px;
 			margin-top: 5px;
-			min-width: 300px;
+			min-width: 80%;
 			font-size: 10px;
 			line-height: 10px;
 			br {
