--- a/sass/style.scss
+++ b/sass/style.scss
@@ -19,7 +19,7 @@
 @import 'blocks/carousel';
 @import 'blocks/catalog';
 @import 'blocks/review';
-
+@import 'blocks/footer';
 
 
 @import 'blocks/media';
