--- a/sass/blocks/_footer.scss
+++ b/sass/blocks/_footer.scss
@@ -1,4 +1,13 @@
 .footer {
-    height: 630px;
+    height: 700px;
     margin-top: 40px;
+    &__map {
+        position: relative;
+        padding: 20px;
+        text-align: center;
+        iframe {
+            width: 900px;
+            height: 600px;
+        }
+    }
 }
