--- a/sass/blocks/_media.scss
+++ b/sass/blocks/_media.scss
@@ -175,11 +175,11 @@
 			}
 			&__subtitle {
 				margin-top: 7px;
-				font-size: 12px;
+				font-size: 14px;
 			}
 			&__descr {
 				margin-top: 5px;
-				font-size: 8px;
+				font-size: 10px;
 			}
 			&__link {
 				margin-top: 7px;
@@ -191,7 +191,7 @@
 			&__list {
 				li {
 					margin-bottom: 5px;
-					font-size: 8px;
+					font-size: 9px;
 				}
 			}
 			hr {
@@ -202,10 +202,10 @@
 				flex-direction: column;
 			}
 			&__old-price {
-				font-size: 8px;
+				font-size: 9px;
 			}
 			&__price {
-				font-size: 15px;
+				font-size: 14px;
 				margin-bottom: 8px;
 			}
 		}
@@ -224,20 +224,58 @@
 		}
 		&__name {
 			margin-top: 30px;
-			font-size: 12px;
+			font-size: 13px;
 		}
 		&__subtitle {
-			font-size: 8px;
+			font-size: 9px;
 			line-height: 8px;
 		}
 		&__comment {
 			margin-right: 10px;
 			margin-top: 5px;
 			min-width: 80%;
-			font-size: 10px;
+			font-size: 11px;
 			line-height: 10px;
 			br {
 				display: none;
+			}
+		}
+	}
+	.footer {
+		height: auto;
+		&__map {
+			padding-top: 10px;
+		}
+		iframe {
+			width: 100%;
+			height: 300px;
+		}
+	}
+	.modal {
+		width: 80%;
+    	min-height: 100px;
+		padding: 10px;
+		&__close {
+			right: -27px;
+		}
+		&__subtitle {
+			font-size: 14px;
+		}
+		&__descr {
+			font-size: 12px;
+		}
+		.feed-form_mt25 {
+			width: auto;
+			// margin: 35px;
+			align-items: center;
+			input {
+				width: 100%;
+				height: 40px;
+			}
+			button {
+				font-size: 13px;
+				width: 80%;
+				height: 40px;
 			}
 		}
 	}
