--- a/sass/style.scss
+++ b/sass/style.scss
@@ -20,7 +20,7 @@
 @import 'blocks/catalog';
 @import 'blocks/review';
 @import 'blocks/footer';
-
+@import 'blocks/modal';
 
 @import 'blocks/media';
 
